--- a/eli.css
+++ b/eli.css
@@ -371,16 +371,16 @@ footer ul li {
 }
 
 /*Cardapio*/
+h1 {
+  text-align: center;
+}
+
 .cardapio {
   display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
-.cardapio .imagem {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.cardapio p {
-  padding: 20px;
+.imagem {
+  text-align: center;
 }
