--- a/eli.css
+++ b/eli.css
@@ -380,3 +380,38 @@ h1 {
 .imagem {
   text-align: center;
 }
+
+.imagem_car {
+  display: flex;
+  align-items: center;
+  margin-right: 13px;
+  max-width: 100%;
+  margin-bottom: 13px;
+  padding: 35px;
+  text-align: left;
+}
+
+.imagem_car img {
+  max-width: 400px;
+  height: auto;
+  border: 2px solid black;
+  margin-right: 30px;
+}
+
+.imagem_car ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+}
+
+.imagem_car:hover img {
+  transform: scale(1.1);
+  transition: 0.5s;
+}
+
+.imagem_car ul li {
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #523e28;
+}
