--- a/eli.css
+++ b/eli.css
@@ -340,19 +340,20 @@ footer ul li {
   color: #a18041;
 }
 
-footer h1,h3 {
-
+footer h1,
+h3 {
   color: white;
 }
 
-footer h1,h3 {
+footer h1,
+h3 {
   margin-bottom: 10px;
   color: white;
 }
 
-#footer_contato > h1,h3{
+#footer_contato > h1,
+h3 {
   text-align: left;
-  
 }
 
 .rodape {
@@ -390,14 +391,35 @@ h1 {
   text-align: center;
 }
 
-.cardapio  {
+.cardapio {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
-.cardapio > .imagem > h2{
-  margin:15px;
+.cardapio > .imagem > h2 {
+  margin: 15px;
+}
+
+.imagem {
+  text-align: center;
+}
+
+.imagem_car {
+  display: flex;
+  align-items: center;
+  margin-right: 13px;
+  max-width: 100%;
+  margin-bottom: 13px;
+  padding: 35px;
+  text-align: left;
+}
+
+.imagem_car img {
+  max-width: 400px;
+  height: auto;
+  border: 2px solid black;
+  margin-right: 30px;
 }
 
 .imagem_car ul {
@@ -418,93 +440,141 @@ h1 {
   color: #523e28;
 }
 
+.cart-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.quantity {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+}
+
+.quantity-btn {
+  background-color: #523e28;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+
+#quantity-value {
+  margin: 0 15px;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #523e28;
+}
+
+.finalizar-compra {
+  padding: 10px 20px;
+  font-size: 18px;
+  color: #fff;
+  background-color: #523e28;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 15px;
+  width: 150px;
+  text-align: center;
+}
+
+.finalizar-compra:hover {
+  background-color: #75553a;
+  transition: 0.3s;
+}
 
 /*CONTATO*/
 
-.localiza{
-    margin-top: 30px;
-    margin-bottom: 10px;
-
+.localiza {
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
 .loc {
-    text-align: left;
-    margin-bottom: 30px;
+  text-align: left;
+  margin-bottom: 30px;
 }
 
 .loc1 {
-    text-align: center;
+  text-align: center;
 }
 
 .loc2 {
-    text-align: left;
-    margin-left: 30px;
-    width: 30px;
-    height: 50px;
-    margin-top: -10px;
-
+  text-align: left;
+  margin-left: 30px;
+  width: 30px;
+  height: 50px;
+  margin-top: -10px;
 }
 
 .loc3 {
-    justify-content: center;
-    text-align: center;
-    display: flex;
-
+  justify-content: center;
+  text-align: center;
+  display: flex;
 }
 
 .mensagem {
-    margin: 100px;
+  margin: 100px;
 }
 
-.container_contato{
-    display:flex;
-    justify-content:space-around;
-    align-items: center;
-    flex-wrap:wrap;
+.container_contato {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-#form_contato > div{
-    display: grid;
-    align-items:center;
+#form_contato > div {
+  display: grid;
+  align-items: center;
 }
 
-#form_contato > div > input{
-    padding: 15px;
-    font-size: 16px;
-    margin: 5px;
-    background-color: rgba(172, 170, 170, 0.697);
-    border:none;
-    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+#form_contato > div > input {
+  padding: 15px;
+  font-size: 16px;
+  margin: 5px;
+  background-color: rgba(172, 170, 170, 0.697);
+  border: none;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
-#form_contato > div{
-    padding:10px;
+#form_contato > div {
+  padding: 10px;
 }
 
-label{
-    width:200px;
+label {
+  width: 200px;
 }
 
-#botoes{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap:wrap ;
+#botoes {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-#botoes > input{
-    justify-content: space-between;
-    flex-wrap:wrap ;
-    padding: 15px 35px 15px 35px;
-    margin: 10px;
-    border:none;
-    background-color: var(---cor02);
-    color: white;
-    font-weight: bolder;
-    font-size:16px ;
-    border-radius: 15px;
-    
+#botoes > input {
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 15px 35px 15px 35px;
+  margin: 10px;
+  border: none;
+  background-color: var(---cor02);
+  color: white;
+  font-weight: bolder;
+  font-size: 16px;
+  border-radius: 15px;
 }
-#botoes > input:hover{
+#botoes > input:hover {
   background-color: var(---cor04);
   color: rgb(22, 21, 21);
   transition: 1s;
@@ -512,26 +582,114 @@ label{
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
-#form_contato > div > textarea{
-    height: 100px;
-    margin: 5px;
-    background-color: rgba(172, 170, 170, 0.697);
+#form_contato > div > textarea {
+  height: 100px;
+  margin: 5px;
+  background-color: rgba(172, 170, 170, 0.697);
 }
 
-.loc3 > a > svg{
-    color:var(---cor02);
-    height:50px;
-    width:50px;
+.loc3 > a > svg {
+  color: var(---cor02);
+  height: 50px;
+  width: 50px;
 }
 
-.loc3 > a > svg:hover{
-    transform: scale(1.2);
-    transition:1s;
-    color: var(---cor04);
-    background-color: var(---cor02);
-    border-radius: 15px;
-    padding: 5px;
+.loc3 > a > svg:hover {
+  transform: scale(1.2);
+  transition: 1s;
+  color: var(---cor04);
+  background-color: var(---cor02);
+  border-radius: 15px;
+  padding: 5px;
 }
 
+/*pedidos*/
 
+body {
+  background-color: #f9f3e7;
+}
 
+/* Estilo base do formulário */
+#formpedido {
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  max-width: 800px;
+  margin: 20px auto;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  display: grid;
+  align-items: center;
+}
+
+/* Estilo dos campos de entrada */
+form input[type="text"],
+form input[type="email"],
+form input[type="number"],
+form input[type="tel"],
+form textarea,
+form select {
+  padding: 15px;
+  font-size: 16px;
+  margin: 5px;
+  background-color: rgba(172, 170, 170, 0.697);
+  border: none;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  width: 90%;
+  border-radius: 5px;
+}
+
+form input[type="checkbox"],
+form input[type="radio"],
+form input[type="date"] {
+  margin-left: 20px; /* Ajuste o valor conforme necessário */
+}
+
+form input[type="time"] {
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+/* Estilo dos botões */
+form button[type="submit"],
+form button[type="reset"] {
+  background-color: var(---cor02);
+  color: white;
+  border: none;
+  padding: 15px 35px;
+  border-radius: 15px;
+  cursor: pointer;
+  font-size: 16px;
+  margin: 10px;
+  transition: background-color 0.3s ease, box-shadow 1s;
+}
+
+form button[type="submit"]:hover,
+form button[type="reset"]:hover {
+  background-color: var(---cor04);
+  color: rgb(22, 21, 21);
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+}
+
+/* Estilo para o layout de botões */
+form #botoes {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+/* Estilo adicional para campos de texto */
+form textarea {
+  height: 100px;
+  background-color: rgba(172, 170, 170, 0.697);
+  margin: 5px;
+}
+
+/* Estilo dos rótulos */
+form label {
+  width: 200px;
+  display: block;
+  margin: 10px 0 5px;
+  font-weight: bold;
+  color: var(---cor02);
+  padding-left: 20px;
+}
