--- a/eli.css
+++ b/eli.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Sriracha&display=swap");
 :root {
-  ---font01: "Dancing Script", Arial, Helvetica, sans-serif;
-  ---cor02: #4e3c1b;
-  ---cor04: #c5a97a;
+  --font01: "Dancing Script", Arial, Helvetica, sans-serif;
+  --cor02: #4e3c1b;
+  --cor04: #c5a97a;
 }
 * {
   margin: 0px;
@@ -13,7 +13,7 @@
 /*Header*/
 .nav_bar {
   display: flex;
-  background-color: var(---cor04);
+  background-color: var(--cor04);
   justify-content: space-around;
   align-items: center;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -27,7 +27,7 @@ nav ul {
 
 nav ul li a {
   display: inline-block;
-  color: var(---cor02);
+  color: var(--cor02);
   text-decoration: none;
   font-size: 25px;
   font-family: "Montserrat", sans-serif;
@@ -58,7 +58,7 @@ nav ul li a:hover {
 .contato {
   display: flex;
   justify-content: end;
-  background-color: var(---cor02);
+  background-color: var(--cor02);
   padding: 10px 10px 5px 10px;
 }
 
@@ -71,13 +71,13 @@ nav ul li a:hover {
 .contato svg:hover {
   transform: scale(1.2);
   transition: 0.5s;
-  color: var(---cor04);
+  color: var(--cor04);
 }
 
 /*Introdução*/
 
 .titulo_home {
-  font-family: var(---font01);
+  font-family: var(--font01);
   margin-top: 40px;
   font-size: 50px;
   text-align: center;
@@ -108,7 +108,7 @@ nav ul li a:hover {
 }
 
 .container_ftdireita {
-  background-color: var(---cor04);
+  background-color: var(--cor04);
   color: #332711;
   display: flex;
   align-items: center;
@@ -251,7 +251,7 @@ h1 {
   font-size: 40px;
   text-align: center;
   margin: 30px 0 10px 0;
-  color: var(---cor02);
+  color: var(--cor02);
 }
 
 h3 {
@@ -273,7 +273,7 @@ p {
 
 .container_ftdireita > p,
 .container_ftesquerda > p {
-  font-family: var(---font01);
+  font-family: var(--font01);
   color: black;
   font-weight: bolder;
   font-size: 30px;
@@ -369,15 +369,15 @@ h3 {
   padding: 20px;
   font-size: 30px;
   font-weight: bolder;
-  background-color: transparent; /* Mantém o fundo transparente no estado normal */
-  border-radius: 30px; /* Aplica o border-radius mesmo sem hover */
-  text-align: center; /* Centraliza o texto */
+  background-color: transparent;
+  border-radius: 30px;
+  text-align: center;
   transition: 1s;
 }
 
 .alunos h1:hover {
   color: var(---cor04);
-  background-color: var(---cor02);
+  background-color: var(--cor02);
   transform: scale(1);
 }
 
@@ -568,14 +568,14 @@ label {
   padding: 15px 35px 15px 35px;
   margin: 10px;
   border: none;
-  background-color: var(---cor02);
+  background-color: var(--cor02);
   color: white;
   font-weight: bolder;
   font-size: 16px;
   border-radius: 15px;
 }
 #botoes > input:hover {
-  background-color: var(---cor04);
+  background-color: var(--cor04);
   color: rgb(22, 21, 21);
   transition: 1s;
   transform: perspective(1.2);
@@ -589,7 +589,7 @@ label {
 }
 
 .loc3 > a > svg {
-  color: var(---cor02);
+  color: var(--cor02);
   height: 50px;
   width: 50px;
 }
@@ -597,42 +597,39 @@ label {
 .loc3 > a > svg:hover {
   transform: scale(1.2);
   transition: 1s;
-  color: var(---cor04);
-  background-color: var(---cor02);
+  color: var(--cor04);
+  background-color: var(--cor02);
   border-radius: 15px;
   padding: 5px;
 }
 
 /*pedidos*/
-
 body {
   background-color: #f9f3e7;
 }
 
-#formpedido {
+form {
   background-color: white;
   border-radius: 10px;
   padding: 20px;
   max-width: 800px;
   margin: 20px auto;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  padding-left: 16px;
 }
 
 form h2 {
-  font-family: var(---font01);
-  color: var(---cor02);
+  font-family: var(--font01);
+  color: var(--cor02);
   font-size: 30px;
   text-align: center;
   margin-bottom: 20px;
-  padding-left: 16px;
 }
 
 label {
   display: block;
-  margin: 10px 0 5px;
+  margin: 10px 10px 5px;
   font-weight: bold;
-  color: var(---cor02);
+  color: var(--cor02);
   padding-left: 20px;
 }
 
@@ -644,21 +641,23 @@ textarea,
 select {
   width: 90%;
   padding: 10px;
-  border: 1px solid var(---cor04);
+  border: 1px solid var(--cor04);
   border-radius: 5px;
   margin-bottom: 10px;
   font-size: 16px;
   padding-left: 16px;
+  margin: 23px;
 }
 
 input[type="radio"],
 input[type="checkbox"] {
   margin-right: 10px;
+  margin-left: 30px;
 }
 
 button[type="submit"],
 button[type="reset"] {
-  background-color: var(---cor04);
+  background-color: var(--cor04);
   color: white;
   border: none;
   padding: 10px 20px;
@@ -668,19 +667,23 @@ button[type="reset"] {
   margin-top: 15px;
   margin-right: 10px;
   transition: background-color 0.3s ease;
-  padding-left: 16px;
 }
 
 button[type="submit"]:hover,
 button[type="reset"]:hover {
-  background-color: var(---cor02);
-  padding-left: 16px;
+  background-color: var(--cor02);
 }
 
 button[type="submit"]:active,
 button[type="reset"]:active {
   transform: scale(1);
-  padding-left: 16px;
+}
+
+input[type="date"],
+input[type="time"] {
+  margin-right: 10px;
+  margin-left: 30px;
+  margin-bottom: 5px;
 }
 
 footer {
